--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <name>Trickl Open Source Matrix Unit Test Library</name>
+  <name>Trickl Matrix Unit Test Library</name>
+  <description>
+    This is a Java library that adds some Junit assertions for the comparison of matrices.
+  </description>
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.trickl</groupId>
   <artifactId>matrixunit</artifactId>
@@ -14,7 +17,24 @@
   </licenses>
   <properties>
     <colt.version>1.2.0</colt.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  <inceptionYear>2011</inceptionYear>
+  <developers>
+    <developer>
+      <name>Tim Gee</name>
+      <email>tim@trickl.com</email>
+    </developer>
+  </developers>
+  <issueManagement>
+    <system>GitHub Issue Tracker</system>
+    <url>https://github.com/trickl/trickl-matrixunit/issues</url>
+  </issueManagement>
+  <url>http://github.com/trickl/trickl-matrixunit/</url>
+  <organization>
+    <name>Trickl</name>
+    <url>http://open.trickl.com</url>
+  </organization>
   <build>
     <plugins>
       <plugin>
@@ -47,6 +67,27 @@
       </plugin>
     </plugins>
   </build>
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.8</version>
+        <reportSets>
+          <reportSet>
+            <id>default</id>
+            <reports>
+              <report>javadoc</report>
+            </reports>
+          </reportSet>
+        </reportSets>
+      </plugin>
+    </plugins>
+  </reporting>
+  <scm>
+    <url>https://github.com/trickl/trickl-matrixunit</url>
+    <connection>scm:git:ssh://git@github.com/trickl/trickl-matrixunit.git</connection>
+  </scm>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
